# weather

./: .cache.sqlite  Makefile  README.md  pyproject.toml
weather/: forms.py  get_place.py  get_weather.py  models.py  settings.py  tests.py  urls.py  views.py
weather/migrations/: 0001_initial.py
weather/templates/: base.html  count_cities.html  index.html
weather/templates/components/: footer.html  navbar.html
