[tool.poetry]
name = "o-complex"
version = "0.1.0"
description = ""
authors = ["Alexandr Kositskiy <koso-96@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.7"
python-dotenv = "^1.0.1"
openmeteo-requests = "^1.2.0"
requests-cache = "^1.2.1"
retry-requests = "^2.0.0"
numpy = "^2.0.0"
pandas = "^2.2.2"
geopy = "^2.4.1"
django-bootstrap5 = "^24.2"
flake8 = "^7.1.0"
dj-database-url = "^2.2.0"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
